# indexara

./: .dockerignore  .gitignore  README.md  pyproject.toml
config/: config.example.yaml
docker/: Dockerfile.agent  Dockerfile.server  docker-compose.yml
indexara/cli/: main.py  output.py
indexara/config/: __init__.py  defaults.py  loader.py  schema.py
indexara/db/: __init__.py  audio.py  catalog.py  connection.py  insights.py  models.py  schema.py  search_index.py
indexara/indexer/: __init__.py  agent.py  hasher.py  metadata.py  steam.py  walker.py
indexara/search/: __init__.py  claude_search.py  executor.py  fts.py
indexara/server/: app.py  main.py
indexara/server/routes/: audio.py  auth.py  devices.py  index.py  insights.py  open.py  scan.py  search.py
indexara/web/: app.js  index.html  style.css
